<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search_teal"
        android:title="@string/search"
        app:actionViewClass="com.beekay.thoughts.ui.ExpandEnableSearchView" />

    <item
        android:id="@+id/action_starred"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/starred_thoughts" />

    <item
        android:id="@+id/action_reminders"
        android:orderInCategory="100"
        android:title="@string/reminders"/>

    <item
        android:id="@+id/action_import"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/import_data"/>
</menu>